--- a/src/style.css
+++ b/src/style.css
@@ -3,5 +3,26 @@
 }
 
 body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  background: #0B2434;
+}
+
+main{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 4em 0;
+  background: #F5F5F5;
+  width: 70vw;
+  height: 70vw;
+  max-height: 800px;
+  border-radius: 10px;
+}
+
+h1{
+  letter-spacing: 2px;
 }
