--- a/src/style.css
+++ b/src/style.css
@@ -31,7 +31,7 @@ main {
   gap: 40px;
 }
 
-.die {
+.die-face {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -42,4 +42,9 @@ main {
   background: #FFFFFF;
   box-shadow: 0px 8px 6px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
+  cursor: pointer;
+}
+
+.die-num{
+  font-size: 3rem;
 }
