--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,17 @@
   box-sizing: border-box;
 }
 
+
+h1,
+h2,
+h3,
+h4,
+h5,
+p {
+  padding: 0;
+  margin: 0;
+}
+
 body {
   display: flex;
   justify-content: center;
@@ -23,12 +34,56 @@ main {
   height: 70vw;
   max-height: 800px;
   border-radius: 10px;
+  gap: 30px;
+}
+
+button {
+  background-color: #5035FF;
+  border: none;
+  color: white;
+  padding: 16px 65px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 25px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  border-radius: 10px;
+  box-shadow: 0px 11px 6px rgba(0, 0, 0, 0.15);
+  margin: 5% 0;
+  cursor: pointer;
+}
+
+
+button {
+  outline: none;
+}
+
+button:hover {
+  background-color: #6550ef;
+  color: white;
+}
+
+button:active {
+  box-shadow: inset 5px 5px 10px -3px rgba(0, 0, 0, 0.7);
 }
 
 .container {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template: auto auto / repeat(5, 1fr);
   gap: 40px;
+}
+
+.text-container {
+  text-align: center;
+  font-size: 2em;
+  padding: 2% 14%;
+
+}
+
+.text-container p {
+  color: #4A4E74;
 }
 
 .die-face {
@@ -45,6 +100,6 @@ main {
   cursor: pointer;
 }
 
-.die-num{
+.die-num {
   font-size: 3rem;
 }
