--- a/src/style.css
+++ b/src/style.css
@@ -26,9 +26,10 @@ body {
 main {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   margin: 4em 0;
+  padding: 70px 0;
   background: #F5F5F5;
   width: 70vw;
   height: 70vw;
@@ -37,7 +38,7 @@ main {
   gap: 30px;
 }
 
-button {
+.roll-dice {
   background-color: #5035FF;
   border: none;
   color: white;
@@ -56,16 +57,16 @@ button {
 }
 
 
-button {
+.roll-dice:focus {
   outline: none;
 }
 
-button:hover {
+.roll-dice:hover {
   background-color: #6550ef;
   color: white;
 }
 
-button:active {
+.roll-dice:active {
   box-shadow: inset 5px 5px 10px -3px rgba(0, 0, 0, 0.7);
 }
 
