added timer function

--- a/src/style.css
+++ b/src/style.css
@@ -26,13 +26,13 @@ body {
 main {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content:center;
   align-items: center;
   margin: 12em 0;
   padding: 70px 0;
   background: #F5F5F5;
-  width: 70vw;
-  height: 70vw;
+  width: 80vw;
+  height: 80vw;
   max-height: 800px;
   border-radius: 10px;
   gap: 30px;
@@ -47,7 +47,7 @@ main {
   text-decoration: none;
   display: inline-block;
   font-size: 25px;
-  margin: 4px 2px;
+  margin: 4px 0 5px 0;
   transition-duration: 0.4s;
   cursor: pointer;
   border-radius: 10px;
@@ -103,4 +103,8 @@ main {
 
 .die-num {
   font-size: 3rem;
+}
+
+.game-message{
+  font-size: 1.5em;
 }
