--- a/src/timer.css
+++ b/src/timer.css
@@ -4,6 +4,7 @@
     display: flex;
     height: 12%;
     justify-content: center;
+    align-items: center;
 }
   
 .digits{
@@ -14,4 +15,20 @@
   
 .mili-sec{
     color:  #e42a2a;
+}
+
+
+
+.prev-digits{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 1.5rem;
+    color: #4A4E74;
+}
+
+.prev-mili-sec{
+    color: #4A4E74;
+}
+
+.best-time{
+    margin-right: 1rem;
 }
