--- a/src/style.css
+++ b/src/style.css
@@ -35,7 +35,7 @@ main {
   height: 80vw;
   max-height: 800px;
   border-radius: 10px;
-  gap: 30px;
+  gap: 20px;
 }
 
 .roll-dice {
@@ -52,7 +52,7 @@ main {
   cursor: pointer;
   border-radius: 10px;
   box-shadow: 0px 11px 6px rgba(0, 0, 0, 0.15);
-  margin: 5% 0;
+  /* margin: 5% 0; */
   cursor: pointer;
 }
 
